# extrabol

./: .gitignore  LICENSE  MANEFEST.in  MANIFEST.in  README  README.md  README.rst  extrabol(DONT USE).py  extrabol.py  mkdocs.yml  paper.md  pip-requirements  pip-requirements.txt  pyproject.toml  requirements.txt  setup.py
docs/: README.md
docs/source/: conf.py  extrabol.example.rst  extrabol.rst  extrabol.template_bank.rst  index.rst  input.rst  installation.rst  modules.rst  quickstart.rst  usage.rst
examples/products/: SN2022oqm_extrabol_ready_0.txt
extrabol/: MANIFEST.in  __init__.py  convert_to_extrabol.py  extrabol.py  snana2extrabol.py
extrabol/products/: Gaia16apd.txt  PS1_PS1MD_PSc090034_extrabol.txt  PSc100170_extrabol.txt  PSc110468_extrabol.txt
extrabol/template_bank/: smoothed_sn2p.npz
outdir/: Gaia16apd.txt
paper/: paper.bib  paper.md
template/: smoothed_sn2l.npz
