[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name="extrabol"
version="1.2.1"
readme = "README.md"
authors = [
    {name = "Ian M. Thornton"},
    {name = "V. Ashley Villar", email = "ashleyvillar@cfa.harvard.edu"},
    {name = "Sebastian Gomez"},
    {name = "Griffin Hosseinzadeh"}
]

description="Estimate SN bolometric light curves"
dependencies=[
    "numpy",
    "astropy",
    "matplotlib",
    "george",
    "extinction",
    "emcee",
    "mkdocs >= 1.2.2",
    "importlib_resources"
]
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python='>=3.6'

[project.scripts]
extrabol = "extrabol.extrabol:main"

[project.urls]
Repository = "https://github.com/villrv/extrabol"
Documentation = "https://extrabol.readthedocs.io/en/latest/"


[tool.setuptools]
packages=["extrabol",
          "extrabol.template_bank",
          "extrabol.example"
         ]
include-package-data = true


[tool.setuptools.package-data]
"extrabol.example" = ["SN2010bc.snana.dat"]
"extrabol.filter_data" = ["fps.xml"]
"extrabol.template_bank" = ["*.npz"]



